Added new methods currentLabel and writeQRCode

--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,18 @@
         },
         {
             "name": "Steve Dillon"
-        }
+        },
+        {
+            "name": "Nicola Asuni",
+            "email": "info@tecnick.com"
+        },
     ],
     "type": "library",
     "autoload": {
-	"classmap": [
-	    "src/PDF_Label.php"
-	]
+        "classmap": [
+            "src/PDF_Label.php",
+            "src/qrcode.php",
+        ]
     },
     "require": {
         "setasign/tfpdf": "^1.32"
